tests/transpiler/x/cobol/string_in_operator.cob
>>SOURCE FORMAT FREE
IDENTIFICATION DIVISION.
PROGRAM-ID. MAIN.

DATA DIVISION.
WORKING-STORAGE SECTION.
01 S PIC X(5) VALUE "catch".
01 TMP PIC S9(9) VALUE 0.

PROCEDURE DIVISION.
    COMPUTE TMP = "cat"
    DISPLAY TMP
    COMPUTE TMP = "dog"
    DISPLAY TMP
    STOP RUN.
